# VVRFramework

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  EyeTrackingAnalysis.opj  README.md  TODO.txt  VVRFramework_install.bat  benchmark-convex_hull.ods  contours.txt  contours_backup.txt  fetch_dll.bat  install.bat
AllDemo/: CMakeLists.txt  demo_window.cpp  demo_window.h  demo_window.ui
Core/: .clang-format  CMakeLists.txt  drawing.cpp  glwidget.cpp  mesh.cpp  scene.cpp  scene_modern.cpp  settings.cpp  utils.cpp  window.cpp
Examples/: Animation.cpp  Animation.h  ArmJoint.cpp  ArmJoint.h  BSplines.cpp  BSplines.h  Boxes.cpp  CGALSurfaceMesher.cpp  CGALSurfaceMesher.h  CGALTest.cpp  CGALTest.h  CMakeLists.txt  ContourEditor.cpp  ContourEditor.h  DNAHelix.cpp  DNAHelix.h  Eyetracking.cpp  Eyetracking.h  KDTrees.cpp  LilacChaser.cpp  LilacChaser.h  Origami.cpp  Origami.h  Simple2D.cpp  Simple2D.h  Simple3D.cpp  Simple3D.h  Sketcher2D.cpp  TestCpp.cpp  Tutorial.cpp  Tutorial.h
Games/: CMakeLists.txt  Playbox.cpp  rollingcar.cpp  tavli.cpp  tavli.h
GeoLib/: C2DLineBaseSet.cpp  C2DPoint.cpp  C2DPointSet.cpp  CMakeLists.txt  TravellingSalesman.cpp
NdiViewer/: CMakeLists.txt  ndiviewer_window.cpp  ndiviewer_window.ui
Src/: CMakeLists.txt  canvas.cpp  drawing.cpp  dsp.cpp  glwidget.cpp  glwidget.h  kdtree.cpp  mesh.cpp  scene.cpp  utils.cpp  window.cpp  window.h
Src/vvr/: CMakeLists.txt  canvas.h  dsp.h  glwidget.h  mesh.h  scene.h  settings.h  utils.cpp  utils.h  window.cpp  window.h
VVRPhysics/: CMakeLists.txt  Cube.cpp  Matrices.h  RigidBody.cpp  SphereContainer.cpp  SpringDumper.cpp  vvrphysicsdll.h
VVRScene/: CMakeLists.txt  canvas.cpp  canvas.h  geom.cpp  geom.h  glwidget.cpp  glwidget.h  icons.qrc  logger.cpp  logger.h  mesh.cpp  mesh.h  scene.cpp  scene.h  settings.cpp  settings.h  simpleLogger.cpp  simpleLogger.h  tiny_obj_loader.cpp  utils.cpp  utils.h  window.cpp  window.h  window.ui
VVRScene/Icons/: Thumbs.db  icons.qrc
src/: CMakeLists.txt
src/Examples/: CMakeLists.txt  Ex_01_Simple2DScene.cpp  Ex_01_Simple2DScene.h  Ex_02_ArmMotionScene.cpp  Ex_02_ArmMotionScene.h  Ex_02_OrientationViewerScene.cpp  Ex_02_OrientationViewerScene.h  Ex_03_PhysicsBasedSimulation.cpp  Ex_03_PhysicsBasedSimulation.h  Ex_03_PhysicsEngineScene.cpp  Ex_03_PhysicsEngineScene.h  Ex_04_ContourEditor.cpp  Ex_04_ContourEditor.h  Scene_ConvexHull.cpp  Scene_ConvexHull.h  armmotionscene.cpp  main.cpp  simple2dscene.cpp  simple2dscene.h  simulation.cpp  simulation.h
src/EyeTracking/: CMakeLists.txt  eyetracking.cpp  eyetracking.h
src/GeoLab/: CMakeLists.txt  GeoLab_00_Intro_01.cpp  GeoLab_00_Intro_01.h  GeoLab_00_Intro_02.cpp  GeoLab_00_Intro_02.h  GeoLab_01_Scene_ConvexHull.cpp  GeoLab_01_Scene_ConvexHull.h  GeoLab_02_IntersectionsScene.cpp  GeoLab_03_TriangulationScene.cpp  GeoLab_04_Scene3D.cpp  GeoLab_04_Scene3D.h  GeoLab_05_CollinearScene.cpp  GeoLab_05_CollinearScene.h  GeoLab_05_MoldingScene.cpp  GeoLab_Apallaktiki_01.cpp  GeoLab_Apallaktiki_01.h  GeoLab_Apallaktiki_02.cpp  GeoLab_Apallaktiki_02.h  GeoLab_Apallaktiki_02_YYYY.cpp  GeoLab_Apallaktiki_02_YYYY.h  GeoLab_Apallaktiki_03.cpp  GeoLab_Apallaktiki_03.h  GeoLab_Exam_2014.cpp  GeoLab_Exam_2015.cpp  GeoLab_Exam_2015.h  p.py
src/GeoLab_2015/: CMakeLists.txt  GeoLab_Apallaktiki_01_XXXX.cpp  GeoLab_Apallaktiki_02_XXXX.cpp  GeoLab_Apallaktiki_02_XXXX.h  GeoLab_Apallaktiki_03_XXXX.cpp
src/GeoLab_2015_Students_Apallaktikes/: CMakeLists.txt
src/GeoLib/: C2DArc.cpp  C2DArc.h  C2DBase.h  C2DBaseSet.cpp  C2DBaseSet.h  C2DCircle.cpp  C2DCircle.h  C2DHoledPolyArc.cpp  C2DHoledPolyArc.h  C2DHoledPolyArcSet.cpp  C2DHoledPolyArcSet.h  C2DHoledPolyBase.cpp  C2DHoledPolyBase.h  C2DHoledPolyBaseSet.cpp  C2DHoledPolyBaseSet.h  C2DHoledPolygon.cpp  C2DHoledPolygon.h  C2DHoledPolygonSet.cpp  C2DHoledPolygonSet.h  C2DLine.cpp  C2DLine.h  C2DLineBase.cpp  C2DLineBase.h  C2DLineBaseSet.cpp  C2DLineBaseSet.h  C2DLineBaseSetSet.cpp  C2DLineBaseSetSet.h  C2DLineSet.cpp  C2DLineSet.h  C2DPoint.cpp  C2DPoint.h  C2DPointSet.cpp  C2DPointSet.h  C2DPolyArc.cpp  C2DPolyArc.h  C2DPolyArcSet.cpp  C2DPolyArcSet.h  C2DPolyBase.cpp  C2DPolyBase.h  C2DPolyBaseSet.cpp  (+37 more)
src/TestProject/: CMakeLists.txt
src/VVRExamples/: CMakeLists.txt  CastingScene.cpp  CastingScene.h  ContourEditorScene.cpp  ContourEditorScene.h  ConvexHullScene.cpp  ConvexHullScene.h  Demo.cpp.fixme  Ex_01_Simple2DScene.cpp  Ex_02_OrientationViewerScene.cpp  Ex_03_PhysicsEngineScene.cpp  Ex_03_PhysicsEngineScene.h  Ex_04_ContourEditor.cpp  Ex_04_ContourEditor.h  Ex_05_Simple3DScene.cpp  Ex_05_Simple3DScene.h  Exam2014.cpp  Exam2014.h  Exam2014Scene.cpp  Exam2014Scene.h  Exam2015.cpp  Exam2015.h  Example_3D.cpp  Example_ContourEditor.cpp  Example_ConvexHull.cpp  Example_Distances.cpp  Example_Distances.h  Example_Exam2014.cpp  Example_Exam2015.cpp  Example_Exam2015.h  Example_Helix.cpp  Example_Helix.h  Example_Intersections.cpp  Example_Intersections.h  Example_MeshManipulation.cpp  Example_MeshManipulation.h  Example_Molding.cpp  Example_OrientationViewer.cpp  Example_OrientationViewer.h  Example_Physics.cpp  (+32 more)
src/VVRFramework/: CMakeLists.txt  canvas.cpp  canvas.h  geom.h  glwidget.cpp  glwidget.h  mesh.cpp  mesh.h  scene.cpp  scene.h  settings.cpp  settings.h  utils.cpp  utils.h  vvrframeworkdll.h  window.cpp  window.h  window.ui
src/VVRPhysics/: Box.cpp  Box.h  CMakeLists.txt  Constants.h  Cube.cpp  Cube.h  Matrices.h  Quaternion.h  Renderable.h  RigidBody.cpp  RigidBody.h  Sphere.cpp  Sphere.h  SphereContainer.cpp  SphereContainer.h  SpringDumper.cpp  SpringDumper.h  Vectors.h  Viewer.cpp  Viewer.h  Wall.cpp  Wall.h  vvrphysicsdll.h
src/VVRScene/: CMakeLists.txt  canvas.cpp  canvas.h  geom.cpp  geom.h  glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h  mesh.cpp  mesh.h  scene.cpp  scene.h  settings.cpp  settings.h  simpleLogger.cpp  tiny_obj_loader.cpp  tiny_obj_loader.h  utils.cpp  utils.h  vvrscenedll.h  window.cpp  window.h  window.ui
src/VVRTemplate/: CMakeLists.txt  armmotionscene.h  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  (+4 more)
(+144 files in other folders)
